# cookiecutter-langgraph-app

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.package_name}}/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  langgraph.json  pyproject.toml
{{cookiecutter.package_name}}/tests/: test_my_template_module.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: agent.py  constants.py  my_template_module.py
