[tool.poetry]
name = "{{cookiecutter.package_name}}"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
langchain = "^0.3.20"
langchain-core = "^0.3.45"
langchain-community = "^0.3.19"
langchain-openai = "^0.3.8"
langgraph-cli = {extras = ["inmem"], version = "^0.2.10"}
langgraph = "^0.4.5"
urllib3 = "^2.4.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
mypy = "^1.15.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["{{cookiecutter.package_name}}", "tests"]
ignore_missing_imports = true