[project]
name = "{{cookiecutter.package_name}}"
version = "0.1.0"
description = ""
authors = []
requires-python = ">=3.12,<3.13"
dependencies = [
    "langchain>=0.3.20,<0.4",
    "langchain-core>=0.3.45,<0.4",
    "langchain-community>=0.3.19,<0.4",
    "langchain-openai>=0.3.8,<0.4",
    "langgraph-cli[inmem]>=0.2.10,<0.3",
    "langgraph>=0.4.5,<0.5",
    "urllib3>=2.4.0,<3",
]

[dependency-groups]
dev = [
    "flake8>=7.2.0,<8",
    "mypy>=1.15.0,<2",
    "pytest>=8.3.5,<9",
    "pytest-cov>=6.1.1,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
files = ["{{cookiecutter.package_name}}", "tests"]
ignore_missing_imports = true
